@@ -8,10 +8,42 @@ muzzle {
   }
 }
 
-tasks.withType<Test>().configureEach {
-  jvmArgs("-Dotel.instrumentation.executors.include=ExecutorInstrumentationTest\$CustomThreadPoolExecutor")
-  jvmArgs("-Djava.awt.headless=true")
-  // ExecutorInstrumentationTest tess internal JDK class instrumentation
-  jvmArgs("--add-opens=java.base/java.util.concurrent=ALL-UNNAMED")
-  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+dependencies {
+  testImplementation(project(":instrumentation:executors:testing"))
+}
+
+testing {
+  suites {
+    // CompletableFuture behaves differently if ForkJoinPool has no parallelism
+    val testNoParallelism by registering(JvmTestSuite::class) {
+      sources {
+        java {
+          setSrcDirs(listOf("src/test/java"))
+        }
+      }
+
+      dependencies {
+        implementation(project(":instrumentation:executors:testing"))
+      }
+
+      targets {
+        all {
+          testTask.configure {
+            systemProperty("java.util.concurrent.ForkJoinPool.common.parallelism", 1)
+          }
+        }
+      }
+    }
+  }
+}
+
+tasks {
+  withType<Test>().configureEach {
+    jvmArgs("-Dotel.instrumentation.executors.include=io.opentelemetry.javaagent.instrumentation.javaconcurrent.ExecutorInstrumentationTest\$CustomThreadPoolExecutor")
+    jvmArgs("-Djava.awt.headless=true")
+  }
+
+  check {
+    dependsOn(testing.suites)
+  }
 }
